feat(grpc-gateway): wire-up grpc-gateway plugin
The changes herein wire-up the `grpc-gateway` plugin to proxy
HTTP requests to grpc handlers using HTTP/JSON to grpc
transcoding.

--- a/helm/access-controller/values.yaml
+++ b/helm/access-controller/values.yaml
@@ -96,3 +96,13 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
+
+postgres:
+  host: localhost
+  port: 5432
+  database: postgres
+  username: postgres
+  credentials:
+    secret: postgres-creds
+    usernameKey: username
+    passwordKey: password
